--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -27,6 +28,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.6.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
