--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/socket.io-client": "^3.0.0",
     "@vercel/analytics": "^0.1.11",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
